--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,18 +1,19 @@
 name: Waka Readme
 
 on:
-schedule:
-    - cron: '0 0 * * *'
-workflow_dispatch:
+  workflow_dispatch:
+  schedule:
+    # Runs at 12am UTC
+    - cron: "0 0 * * *"
+
 jobs:
-update-readme:
-    name: Update Readme with Metrics
+  update-readme:
+    name: Update this repo's README 
     runs-on: ubuntu-latest
     steps:
-    - uses: IZSSERAFIM/waka-readme-stats@master
+      - uses: IZSSERAFIM/waka-readme@master
         with:
-        WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        SHOW_PROFILE_VIEWS: False
-        SHOW_SHORT_INFO: False
-        SHOW_LOC_CHART: False
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_OS: "False"
+          SHOW_PROJECTS: "False"
